The current folder now shows its color next to its name

--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                   <div class="category active-category">👨🏻‍🎓School</div>
                   <div class="category">🙋🏼‍♂️Personal</div>
               </div>
+<!--              <div id="tags-dropdown" class="sidebar-dropdown">-->
+<!--                  <i id="chevron-tags" class="bi bi-chevron-right"></i>-->
+<!--                  <i id="tags-icon" class="bi bi-tags"></i>-->
+<!--                  <span class="tag-title">Tags</span>-->
+<!--              </div>-->
+<!--              <div class="tags collapsed-sidebar-dropdown"></div>-->
           </div>
 
           <div class="sidebar-content-lower">
