The searchbar is now a re-useable web component

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <title>Photon</title>
     
     <script src="src/frontend/javascript/components/lists/lists.js"></script>
+    <script src="src/frontend/javascript/components/searchbar/searchbar.js"></script>
     <script type="module" src="src/frontend/javascript/components/entities/folder.js"></script>
     <script type="module" src="src/frontend/javascript/components/entities/note.js"></script>
     <script type="module" src="src/frontend/javascript/components/entities/stickyNote.js"></script>
