--- a/src/frontend/frontend_playground/test6.html
+++ b/src/frontend/frontend_playground/test6.html
@@ -50,12 +50,6 @@
         font-weight: 600;
     }
 
-    .note-reference .last-edit-date {
-        color: #c1c1df;
-        font-size: 14px;
-        font-weight: 400;
-    }
-
 
 
     
@@ -65,9 +59,7 @@
    <div class="note-reference">
         <i class="bi bi-file-earmark"></i>
         <div>
-            <span class="note-name">Fallacies of distributed systems
-            </span>
-            <span class="last-edit-date">5 minutes ago</span>
+            <span class="note-name">Fallacies of distributed systems</span>
         </div>
    </div>
 
