Bookmarks can now be viewed from the home tab

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div class="sidebar-content">
           <div class="sidebar-content-upper">
-                <a href="/home" data-view="home" id="home-btn"><i class="bi bi-house"></i><span></span></a>
-                <a href="/notes" data-view="notes" id="notes-btn"><i class="bi bi-file-earmark"></i><span></span></a>
+                <a href="/home" data-view="home_view_id" id="home-btn"><i class="bi bi-house"></i><span></span></a>
+                <a href="/notes" data-view="notes_view_id" id="notes-btn"><i class="bi bi-file-earmark"></i><span></span></a>
               <div id="pinned-folders-dropdown" class="sidebar-dropdown">
                   <i id="chevron-pinned-folder" class="bi bi-chevron-right"></i>
                   <i id="pinned-folder-icon" class="bi bi-folder-symlink"></i>
@@ -84,7 +84,7 @@
           </div>
 
           <div class="sidebar-content-lower">
-            <a href="/settings" data-view="settings" id="settings-btn"><i class="bi bi-gear"></i><span></span></a>
+            <a href="/settings" data-view="settings_view_id" id="settings-btn"><i class="bi bi-gear"></i><span></span></a>
           </div>
         </div>
     </div>
