--- a/src/frontend/frontend_playground/test6.html
+++ b/src/frontend/frontend_playground/test6.html
@@ -3,65 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/components/entities/milestone.css">
-    <script type="module" src="../javascript/components/entities/milestone.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/general/themes.css">
+    <title>Editable Div to PDF (HTML Support)</title>
+    <link rel="stylesheet" href="../styles/textEditor/textEditor.css">
+    <link rel="stylesheet" href="../styles/general/main.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f8f8;
+            padding: 20px;
+        }
+
+        #editableDiv {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            min-height: 200px;
+            background: white;
+            text-align: left;
+            font-size: 16px;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
-<style>
-    * {
-        font-family: Poppins;
-    }
-
-    .note-reference {
-        cursor: pointer;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        padding: 10px;
-        display: flex;
-        align-items: center;
-        column-gap: 20px;
-        width: fit-content;
-    }
-
-    .note-reference div {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .note-reference i {
-        width: 40px;
-        height: 40px;
-        border-radius: 5px;
-        background-color: #f0f0ff;
-        font-size: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .note-reference .note-name {
-        font-weight: 600;
-    }
-
-
-
-    
-</style>
-
 <body>
-   <div class="note-reference">
-        <i class="bi bi-file-earmark"></i>
-        <div>
-            <span class="note-name">Fallacies of distributed systems</span>
-        </div>
-   </div>
+
+<h2>Editable Div to PDF (HTML Support)</h2>
+
+<div id="editableDiv" class="editor-paper" contenteditable="true">
+    <p><strong>Type your text here...</strong></p>
+    <p>You can add <em>formatted</em> text, <span style="color: red;">colors</span>, and even <a href="#">links</a>.</p>
+    <ul>
+        <li>Bullet points</li>
+        <li>Will be preserved</li>
+    </ul>
+    <p>Multi-page support included!</p>
+</div>
+
+<button onclick="generatePDF()">Download PDF</button>
+
+<script>
+    async function generatePDF() {
+        const { jsPDF } = window.jspdf;
+        const pdf = new jsPDF({
+            orientation: 'portrait',
+            unit: 'mm',
+            format: 'a4'
+        });
+
+        const content = document.getElementById('editableDiv');
+
+        // Fetch external CSS and inject it into a <style> tag
+        const cssURL = "../styles/textEditor/textEditor.css"; // Change to your CSS file path
+        const cssText = await fetch(cssURL).then(res => res.text());
+        const styleTag = document.createElement("style");
+        styleTag.innerHTML = cssText;
+        document.head.appendChild(styleTag);
+
+        // Temporarily remove border for clean PDF export
+        const originalBorder = content.style.border;
+        content.style.border = "none";
+
+        await pdf.html(content, {
+            callback: function (pdf) {
+                pdf.save('document.pdf');
+                // Restore styles
+                content.style.border = originalBorder;
+                document.head.removeChild(styleTag);
+            },
+            x: 10,
+            y: 10,
+            width: 180,
+            windowWidth: content.scrollWidth,
+        });
+    }
+
+</script>
 
 </body>
 </html>
