--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script type="module" src="src/frontend/core/components/searchbar/searchbar.js"></script>
     <script type="module" src="src/frontend/core/components/entities/folder.js"></script>
     <script type="module" src="src/frontend/core/components/entities/note.js"></script>
+    <script type="module" src="src/frontend/core/components/entities/category.js"></script>
     <script type="module" src="src/frontend/core/components/pageBlocks/pageBlocks.js"></script>
     <script type="module" src="src/frontend/core/components/notifications/notifications.js"></script>
     <script type="module" src="src/frontend/core/components/editor.js"></script>
@@ -76,11 +77,7 @@
                   <i id="categories-icon" class="bi bi-archive"></i>
                   <span class="category-title">Categories</span>
               </div>
-              <div class="categories collapsed-sidebar-dropdown">
-                  <div class="category">Work</div>
-                  <div class="category active-category">👨🏻‍🎓School</div>
-                  <div class="category">🙋🏼‍♂️Personal</div>
-              </div>
+              <div class="categories collapsed-sidebar-dropdown"></div>
           </div>
 
           <div class="sidebar-content-lower">
